Add Netlify deployment configuration
- Add netlify.toml with proper Next.js 14 settings
- Install @netlify/plugin-nextjs
- Add .nvmrc for Node 20
- Configure build environment and redirects
- Fix base directory issues

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@netlify/plugin-nextjs": "^5.13.3",
     "@playwright/test": "^1.55.0",
     "@tailwindcss/postcss": "^4.1.12",
     "@types/node": "^20",
