--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,14 @@
 [build]
-  command = "npm run build"
+  command = "npm run build:netlify"
   publish = ".next"
   base = ""
 
 [build.environment]
   NEXT_TELEMETRY_DISABLED = "1"
   NODE_VERSION = "20"
+  # Fallback values for missing Sanity config
+  NEXT_PUBLIC_SANITY_PROJECT_ID = "placeholder-project-id"
+  NEXT_PUBLIC_SANITY_DATASET = "production"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
