--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "node scripts/build-check.js && next build",
+    "build:netlify": "node scripts/build-check.js && next build",
     "start": "next start",
     "lint": "eslint",
     "sanity": "sanity dev",
