--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "forbes-clinic",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=20.18.0",
+    "npm": ">=10.0.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "node scripts/build-check.js && next build",
@@ -25,11 +29,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.542.0",
-    "next": "15.5.2",
-    "next-sanity": "^10.0.14",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "14.2.15",
+    "next-sanity": "^9.10.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "sanity": "^4.6.0",
+    "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -39,11 +44,11 @@
     "@playwright/test": "^1.55.0",
     "@tailwindcss/postcss": "^4.1.12",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.2",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.15",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
