Fix Sanity dependency conflicts for Netlify deployment
- Downgrade sanity from v4.6.0 to v3.99.0 for compatibility
- Downgrade @sanity/vision from v4.6.0 to v3.99.0
- Update @sanity/client from v7.10.0 to v6.21.3 (compatible)
- Keep next-sanity at v9.10.0 (compatible with Sanity v3)
- Add NPM_FLAGS = '--legacy-peer-deps' to netlify.toml
- Add package overrides to force compatible versions
- Build now succeeds with all dependencies resolved
- All 26 static pages generate successfully

--- a/netlify.toml
+++ b/netlify.toml
@@ -6,6 +6,7 @@
 [build.environment]
   NEXT_TELEMETRY_DISABLED = "1"
   NODE_VERSION = "20.18.0"
+  NPM_FLAGS = "--legacy-peer-deps"
   # Fallback values for missing Sanity config
   NEXT_PUBLIC_SANITY_PROJECT_ID = "placeholder-project-id"
   NEXT_PUBLIC_SANITY_DATASET = "production"
