--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
     "node": ">=20.18.0",
     "npm": ">=10.0.0"
   },
+  "overrides": {
+    "sanity": "^3.99.0",
+    "@sanity/client": "^6.21.3",
+    "@sanity/vision": "^3.99.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "node scripts/build-check.js && next build",
@@ -23,9 +28,9 @@
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
-    "@sanity/client": "^7.10.0",
+    "@sanity/client": "^6.21.3",
     "@sanity/image-url": "^1.1.0",
-    "@sanity/vision": "^4.6.0",
+    "@sanity/vision": "^3.99.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.542.0",
@@ -33,7 +38,7 @@
     "next-sanity": "^9.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "sanity": "^4.6.0",
+    "sanity": "^3.99.0",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
